# grann

./: .gitignore  CMakeLists.txt  README.md  unit_tester.sh
include/: aknn.h  aligned_file_reader.h  ann_exception.h  aux_utils.h  cached_io.h  common_includes.h  concurrent_queue.h  cosine_similarity.h  dataset.h  diskann.h  distance.h  essentials.h  exceptions.h  graph_index.h  hnsw.h  hnsw_layer.h  index.h  ivf.h  logger.h  logger_impl.h  lsh.h  math_utils.h  memory_mapper.h  neighbor.h  parameters.h  partition_and_pq.h  percentile_stats.h  pq_flash_index.h  pq_table.h  random_dist_gen.h  recall_utils.h  relative_ng.h  timer.h  utils.h  vamana.h  windows_aligned_file_reader.h  windows_customizations.h
label_gen/: requirements.txt  setup.py
label_gen/base/: distribution.py  distributions.py  filter_class.py  lib.py
label_gen/scripts/: file_bipartite_graph.py  label_gen_classes.py  label_stats.py  parse_data.py
label_gen/tests/: test_distributions.py  test_filter_class.py
notebooks/: SVD.ipynb  bloom.ipynb  core_utils.py  hnsw.ipynb  hnsw_build.py  scann.ipynb  scr.sh  scr_diskann.sh
notes/: codebase_notes.md  doubts.md  index.md  robin_set.md
src/: CMakeLists.txt  aknn.cpp  ann_exception.cpp  aux_compute_groundtruth.cpp  aux_utils.cpp  dataset.cpp  diskann.cpp  graph_index.cpp  hnsw.cpp  index.cpp  ivf.cpp  linux_aligned_file_reader.cpp  logger.cpp  lsh.cpp  math_utils.cpp  memory_mapper.cpp  partition_and_pq.cpp  pq_flash_index.cpp  recall_utils.cpp  relative_ng.cpp  utils.cpp  vamana.cpp  windows_aligned_file_reader.cpp
src/dll/: CMakeLists.txt
tests/: CMakeLists.txt  benchmarks.py  build_approx_knn.cpp  build_hnsw.cpp  build_ivf.cpp  build_lsh.cpp  build_memory_index.cpp  build_relng.cpp  build_vamana.cpp  build_var_degree_vamana.cpp  compute_filtered_groundtruth.cpp  dist_gen.cpp  load_random_dist.cpp  reorder_graph.cpp  search_approx_knn.cpp  search_hnsw.cpp  search_ivf.cpp  search_lsh.cpp  search_memory_index.cpp  search_relng.cpp  search_vamana.cpp  test_incremental_index.cpp
tests/utils/: CMakeLists.txt  bin_to_fvecs.cpp  bin_to_tsv.cpp  calculate_recall.cpp  compute_groundtruth.cpp  compute_mf_groundtruth.cpp  create_disk_layout.cpp  float_bin_to_int8.cpp  generate_pq.cpp  int8_to_float.cpp  merge_shards.cpp  partition_data.cpp  partition_with_ram_budget.cpp  uint32_to_uint8.cpp  uint8_to_float.cpp  vector_analysis.cpp
